[gd_scene load_steps=12 format=3 uid="uid://dhryy77waq6s8"]

[ext_resource type="Script" path="res://UI/card_select_panel.gd" id="1_g3f8n"]
[ext_resource type="Texture2D" uid="uid://it6yijx6o1kf" path="res://Art/left_dark_arrow.png" id="2_t5tpp"]
[ext_resource type="Texture2D" uid="uid://cfw58vinyvn4" path="res://Art/left_highlight_arrow.png" id="3_l8cuu"]
[ext_resource type="PackedScene" uid="uid://ffyuf8apar7g" path="res://UI/CardDisplay.tscn" id="4_rjlbt"]
[ext_resource type="Texture2D" uid="uid://cyhjy5mtiuxu8" path="res://Art/right_dark_arrow.png" id="5_utu6a"]
[ext_resource type="Texture2D" uid="uid://bmy6fb3lbfieg" path="res://Art/right_highlight_arrow.png" id="6_yho8c"]
[ext_resource type="AudioStream" uid="uid://dtfbox5faho26" path="res://Sound/Blip_Select12.wav" id="7_uxa71"]
[ext_resource type="AudioStream" uid="uid://8mwgp0lg27td" path="res://Sound/Blip_Back.wav" id="8_c5ng2"]
[ext_resource type="AudioStream" uid="uid://c53j66iumadsn" path="res://Sound/MenuNavigate.wav" id="9_7tdkb"]

[sub_resource type="Animation" id="Animation_uvfwg"]
resource_name = "Animate Join Sprite"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j2eua"]
_data = {
"Animate Join Sprite": SubResource("Animation_uvfwg")
}

[node name="CardSelect" type="PanelContainer"]
clip_contents = true
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"Panel2"
script = ExtResource("1_g3f8n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_j2eua")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameBox" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Name" type="Label" parent="VBoxContainer/NameBox"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "Wizard Man
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0
alignment = 1

[node name="LeftButton" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_t5tpp")
texture_pressed = ExtResource("3_l8cuu")
texture_hover = ExtResource("3_l8cuu")
texture_disabled = ExtResource("2_t5tpp")
texture_focused = ExtResource("3_l8cuu")

[node name="LeftCard" parent="VBoxContainer/HBoxContainer2" instance=ExtResource("4_rjlbt")]
unique_name_in_owner = true
layout_mode = 2

[node name="CenterCard" parent="VBoxContainer/HBoxContainer2" instance=ExtResource("4_rjlbt")]
unique_name_in_owner = true
layout_mode = 2

[node name="RightCard" parent="VBoxContainer/HBoxContainer2" instance=ExtResource("4_rjlbt")]
unique_name_in_owner = true
layout_mode = 2

[node name="RightButton" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_utu6a")
texture_pressed = ExtResource("6_yho8c")
texture_hover = ExtResource("6_yho8c")
texture_disabled = ExtResource("5_utu6a")
texture_focused = ExtResource("6_yho8c")

[node name="SelectButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "Select
"

[node name="SelectNoise" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_uxa71")

[node name="BackNoise" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_c5ng2")

[node name="MenuMove" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_7tdkb")

[connection signal="button_down" from="VBoxContainer/HBoxContainer2/LeftButton" to="." method="_on_left_button_button_down"]
[connection signal="newName" from="VBoxContainer/HBoxContainer2/CenterCard" to="." method="_on_center_card_new_name"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer2/RightButton" to="." method="_on_right_button_button_down"]
[connection signal="button_down" from="VBoxContainer/SelectButton" to="." method="_on_select_button_button_down"]
